--- a/styles.css
+++ b/styles.css
@@ -5,11 +5,16 @@
     padding: 0;
 }
 
-.nav{
+header{
     background-color: #1f2937;
+    display: flex;
+    flex-direction: column;
+    padding: 0 13em;
+}
+.nav{
     color: white;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     padding: 20px 0;
 
@@ -21,60 +26,47 @@
 
 .container.bg-blue{
     display: flex;
-    justify-content: center;
-    padding: 110px;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding: 5em 0;
 }
 
-.content-container.bg-blue{
-    display: flex;
-    justify-content: center;
-    gap: 155px;
+.container.bg-blue .text-container{
+    flex-shrink: 2;
 }
 
-.content-container.bg-blue .text-container{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    width: 500px;
-    box-sizing: border-box;
-    padding-right: 50px;
-    height: 250px;
-}
-
-.content-container.bg-blue .text-container h1{
-    color: #F9FAF8;
+.container.bg-blue .text-container h1{
     font-size: 48px;
     font-weight: 900;
+    color: #F9FAF8;
 }
 
-.content-container.bg-blue .text-container p{
+.container.bg-blue .text-container p{
+    font-size: 18px;
     color: #E5E7EB;
-    font-size: 18px;
+    margin-bottom: 0.5em;
 }
 
-.content-container.bg-blue .text-container button{
-    background-color: #3882F6;
-    width: fit-content;
-    border: none;
-    color: white;
-    font-size: 18px;
-    padding: 10px 35px;
-    border-radius: 10px;
+.container.bg-blue .text-container button{
+    font-size: 17px;
     font-weight: 700;
+    color: #E5E7EB;
+    background-color: #3882F6;
+    border: none;
+    padding: 0.5em 1.75em;
+    border-radius: 0.4em;
 }
 
-.content-container.bg-blue .img{
-    width: 600px;
-    height: 250px;
+.container.bg-blue .img{
+    flex-shrink: 1;
+    width: 40%;
     background-color: #6d747e;
     display: flex;
     justify-content: center;
     align-items: center;
+    color: #E5E7EB;
 }
 
-.content-container.bg-blue .img .placeholder-text{
-    color: white;
-}
 
 
 
