--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ header{
     background-color: #1f2937;
     display: flex;
     flex-direction: column;
-    padding: 0 13em;
+    padding: 0 25em;
 }
 .nav{
     color: white;
@@ -27,13 +27,12 @@ header{
 .container.bg-blue{
     display: flex;
     justify-content: space-between;
-    flex-wrap: wrap;
-    padding: 5em 0;
+    flex-wrap: wrap-reverse;
+    align-items: center;
+    padding: 5em 0 10em 0;
 }
 
-.container.bg-blue .text-container{
-    flex-shrink: 2;
-}
+
 
 .container.bg-blue .text-container h1{
     font-size: 48px;
@@ -48,18 +47,18 @@ header{
 }
 
 .container.bg-blue .text-container button{
-    font-size: 17px;
+    font-size: 18px;
     font-weight: 700;
     color: #E5E7EB;
     background-color: #3882F6;
     border: none;
-    padding: 0.5em 1.75em;
+    padding: 0.5em 2em;
     border-radius: 0.4em;
 }
 
 .container.bg-blue .img{
-    flex-shrink: 1;
-    width: 40%;
+    width: 35em;
+    height: 230px;
     background-color: #6d747e;
     display: flex;
     justify-content: center;
